--- a/src/components/SettingsForm/style.module.css
+++ b/src/components/SettingsForm/style.module.css
@@ -5,6 +5,12 @@
 	gap: 2rem;
 	margin: auto;
 	align-items: center;
+	flex-direction: column;
+}
+@media screen and (min-width: 1000px) {
+	.form {
+		flex-direction: row;
+	}
 }
 
 .form label {
