--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,7 @@ body,
 	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
-	padding-block: 5rem;
+	justify-content: space-around;
+	width: 100%;
+	align-items: center;
 }
